plugins {
    id 'java-library'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

javafx {
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

dependencies {
    implementation "commons-io:commons-io:2.11.0"
    implementation "org.apache.commons:commons-csv:1.9.0"
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
    implementation 'org.openjfx:javafx-controls:16'
    implementation 'org.openjfx:javafx-fxml:16'
    testImplementation 'junit:junit:4.13.2'
}